<resources>
    <string name="app_name">SmiteApp</string>
    <string name="title_activity_main_menu">MainMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <string name="my_profile">My Profile</string>
    <string name="create_new_build">Create new build</string>
    <string name="gods_name">Type your God\'s name</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="build">Build</string>
    <string name="counter">Counter</string>
    <string name="search">Search</string>
    <string name="points">000 points</string>
    <string name="crew">[ MyCrew ]</string>
    <string name="facebook">Facebook</string>
    <string name="preferred_system">Preferred System</string>
    <string name="xbox">Xbox</string>
    <string name="computer">Computer</string>
    <string name="playstation">Playstation</string>
    <string name="ingame_name">In-Game Username</string>
    <string name="create_account">Create Account</string>
    <string name="email">E-mail</string>
    <string name="create">Create</string>
    <string name="find_me">Find Me @</string>
    <string name="in_game_name">In-Game Name</string>
    <string name="device">Device</string>
    <string name="select_game_mode_new_build">1. What game mode is best for your new build?</string>
    <string name="conquest_mode">Conquest</string>
    <string name="mid_lane">Mid</string>
    <string name="carry">Carry</string>
    <string name="mid">Mid</string>
    <string name="guard">Guard</string>
    <string name="jungle">Jungle</string>
    <string name="solo">Solo</string>
    <string name="arena">Arena</string>
    <string name="arena_mode">Arena</string>
    <string name="joust_mode">Joust</string>
    <string name="assault_mode">Assault</string>
    <string name="siege_mode">Siege</string>
    <string name="next">Next</string>
    <string name="select_the_god">2. Select the God</string>
    <string name="filter_by">Filter By:</string>
    <string name="create_build">3. Create Build</string>
    <string name="finish">Finish</string>
    <string name="build_title">Build Title</string>
    <string name="selected_mode">Selected Mode</string>
    <string name="username_length">Username must be between 4 an 16 characters</string>
    <string name="password_length">Password must be between 4 an 16 characters</string>
    <string name="valid_characters">Only Alphanumeric, \"-\" or \"_\"</string>
    <string name="email_format">Email must be formatted: \'example@example.com\'</string>
    <string name="email_length">Email is empty</string>
    <string name="go">Go</string>
    <string name="select_god">Select God</string>
    <string name="news">What\'s New?</string>
    <string name="ranking">Ranking</string>
    <string name="leave_feedback">Leave Feedback</string>

    <string-array name="god_names_array">
        <item>Agni</item>
        <item>Ah Muzen Cab</item>
        <item>Ah Puch</item>
        <item>Amaterasu</item>
        <item>Anhur</item>
        <item>Anubis</item>
        <item>Ao Kuang</item>
        <item>Erlang Shen</item>
        <item>The Morrigan</item>
        <item>Thor</item>
        <item>Rama</item>
        <item>Aphrodite</item>
        <item>Apollo</item>
        <item>Arachne</item>
        <item>Athena</item>
        <item>Awilix</item>
        <item>Bacchus</item>
        <item>Bakasura</item>
        <item>Bastet</item>
        <item>Bellona</item>
        <item>Cabrakan</item>
        <item>Camazotz</item>
        <item>Cernunnos</item>
        <item>Chaac</item>
    </string-array>

    <string-array name="game_modes">
        <item>Any</item>
        <item>Arena</item>
        <item>Joust</item>
        <item>Conquest</item>
        <item>Assault</item>
        <item>Siege</item>
    </string-array>

    <string-array name="conquest_lanes">
        <item>Any</item>
        <item>Carry</item>
        <item>Jungle</item>
        <item>Solo</item>
        <item>Guardian</item>
        <item>Mid</item>
    </string-array>

    <string-array name="damage_type">
        <item>Any</item>
        <item>Magical</item>
        <item>Physical</item>
    </string-array>

    <string-array name="type">
        <item>Any</item>
        <item>Power</item>
        <item>Physical Def</item>
        <item>Magical Def</item>
        <item>Lifesteal</item>
        <item>Attack Speed</item>
    </string-array>

    <string-array name="item_names">
        <item>Acorn Of Swiftness</item>
        <item>Acorn of Yggdrasil</item>
        <item>Adventurers Blade</item>
        <item>Aegis Amulet</item>
        <item>Anient Blade</item>
        <item>Ancile</item>
        <item>Armored Cloak</item>
        <item>Asi</item>
        <item>Balanced Blade</item>
        <item>Bancrofts Talon</item>
        <item>Belt of Frenzy</item>
        <item>Blackthorn Hammer</item>
        <item>Blink Rune</item>
        <item>Bloodforge</item>
        <item>Bluestone Pendant</item>
        <item>Book of the Dead</item>
        <item>Book of Thoth</item>
        <item>Boots</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gods_avatar">God\'s avatar</string>
    <string name="filter_by_game_mode">Filter by game mode</string>
    <string name="any_mode">Any</string>
    <string name="build_name">Build\'s name</string>
    <string name="by_username">By: Username</string>
    <string name="build_date">11/11/2011</string>
    <string name="last_updated">Last Updated</string>
    <string name="by">By:</string>
    <string name="load_more">Load more</string>
    <string name="item">Item</string>
</resources>

