<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_create_build"
            android:icon="@drawable/build"
            android:title="@string/create_new_build" />

        <item
            android:id="@+id/nav_counters"
            android:icon="@drawable/counter"
            android:title="@string/counter" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ranking"
            android:title="@string/ranking" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/leave_feedback" />

    </group>

</menu>
