<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/outter_margin"
    android:gravity="center">


    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="@dimen/medium_logo"
        android:layout_height="@dimen/medium_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

        <EditText
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="72dp"
        android:paddingRight="72dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/forgot_password_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/forgot_password" />

</RelativeLayout>
