<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.manrique.daniel.smiteapp.MainMenu"
        tools:showIn="@layout/app_bar_main_menu">


        <EditText
            android:id="@+id/gods_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:ems="30"
            android:gravity="center"
            android:hint="@string/gods_name"
            android:inputType="text"

            android:maxLines="1"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gods_name_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build"
                android:textSize="24sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:text="@string/counter"
                android:textSize="24sp" />
        </RadioGroup>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"></Spinner>


    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:contentDescription="@string/search"
        android:padding="24dp"
        android:src="@drawable/ic_menu_send"
        android:text="@string/go"
        android:textSize="@dimen/main_title" />

</LinearLayout>