<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_the_god"
            android:textSize="@dimen/main_title" />

        <TextView
            android:id="@+id/filter_by_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:text="@string/filter_by"
            android:textSize="@dimen/subtitle" />

        <GridView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/filter_by_txt"
            android:layout_marginTop="12dp"
            android:choiceMode="singleChoice"
            android:gravity="center"
            android:isScrollContainer="false"
            android:numColumns="5">

        </GridView>

        <GridView
            android:id="@+id/gods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/categories"
            android:layout_marginTop="36dp"
            android:choiceMode="singleChoice"
            android:gravity="center"
            android:isScrollContainer="false"
            android:numColumns="7">

        </GridView>


        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gods"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="36dp"

            android:paddingRight="36dp"
            android:text="@string/next" />


    </RelativeLayout>

</ScrollView>